# eshop

./: .gitignore  CLAUDE.md  Claude_guide.md  PROJECT_STRUCTURE.md  README.md  schema.sql  seed.sql
backend/: .env.example  .env.local.example  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: addresses.py  admin.py  auth.py  bulk.py  cart.py  categories.py  coupons.py  notifications.py  orders.py  payouts.py  products.py  refunds.py  reviews.py  shops.py  wishlist.py
backend/app/core/: auth_verifier.py  security.py  state_machines.py  storage.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  archive.py  audit.py  cart.py  coupon.py  enums.py  notification.py  order.py  payment.py  product.py  review.py  shop.py  user.py
backend/app/schemas/: address.py  admin.py  bulk.py  cart.py  common.py  coupon.py  notification.py  order.py  payout.py  product.py  refund.py  review.py  shop.py  user.py  wishlist.py
backend/app/services/: address_service.py  admin_service.py  auth_service.py  bulk_service.py  cart_service.py  category_service.py  coupon_service.py  notification_service.py  order_service.py  payout_service.py  product_service.py  refund_service.py  review_service.py  shop_service.py  wishlist_service.py
database/: schema.sql  seed.sql
frontend/: package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: use-addresses.ts  use-admin.ts  use-auth-redirect.ts  use-cart.ts  use-coupons.ts  (+13 more)
(+132 files in other folders)
